# trumpet

backend/: .gitignore  Cargo.toml  log_process_RAM_usage.sh  run_multiple_binaries.sh  schema.json
backend/auth-server/: .gitignore  192.168.0.108+3-key.pem  192.168.0.108+3.pem  Cargo.toml
backend/auth-server/src/: main.rs  models.rs
backend/auth-server/src/routes/: authenticate.rs  jwt.rs  login.rs  mod.rs
backend/cdn-server/: Cargo.toml
backend/entity/: Cargo.toml
backend/entity/src/: buzz.rs  ratings.rs  reply.rs  trending.rs  users.rs
backend/graphql-server/: .gitignore  Cargo.toml
backend/graphql-server/entity/: Cargo.toml
backend/graphql-server/entity/src/: auth.rs  buzz.rs  lib.rs  prelude.rs  ratings.rs  reply.rs  users.rs
backend/graphql-server/migration/: Cargo.toml
backend/graphql-server/migration/src/: m20220101_000001_create_table.rs
backend/graphql-server/src/: main.rs
backend/graphql-server/src/lib/: common.rs  mod.rs  server_auth.rs
backend/graphql-server/src/schemas/: auth.rs  buzz.rs  mod.rs  ratings.rs  reply.rs  root.rs  users.rs
backend/migration/: Cargo.toml
backend/migration/src/: m20220101_000001_create_table.rs
backend/sql-files/: create-tables.sql  delete-tables.sql
