[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "entity",
    "migration",
    "graphql-server",
    "auth-server",
    "cdn-server",
]

[dependencies]
actix-web = {version = "4", features = ["openssl"]}
openssl = { version = "0.10", features = ["v110"]}
serde = { version = "*", features = ["derive"] }
reqwest = "*"
chrono = "*"

juniper = "*"

entity = { path = "entity" }
migration = { path = "migration" }

async-std = "1.11.0"
argonautica = "0.2.0"
jsonwebtoken = "^8"

[dependencies.sea-orm]
version = "^0.8.0"
features = [
  "debug-print",
  "runtime-actix-native-tls",
#   "sqlx-mysql",
  "sqlx-postgres",
  # "sqlx-sqlite",
]

[[bin]]
name = "graphql-server"
path = "graphql-server/src/main.rs"

[[bin]]
name = "auth-server"
path = "auth-server/src/main.rs"

[[bin]]
name = "cdn-server"
path = "cdn-server/src/main.rs"
