[package]
name = "graphql-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
serde = { version = "*", features = ["derive"] }
reqwest = { version = "*", features = ["json"] }
chrono = "*"

serde_json = "*"

juniper = "*"

entity = { path = "../entity" }
migration = { path = "../migration" }

argonautica = "0.2.0"

actix-web-lab = "0.10"

[dependencies.sea-orm]
version = "^0.9.0"
features = [
    "debug-print",
    "runtime-actix-native-tls",
    #   "sqlx-mysql",
    "sqlx-postgres",
    # "sqlx-sqlite",
]