[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
sea-query = "*"
chrono = "*"

[dependencies.sea-orm-migration]
version = "^0.8.0"
features = [
  "runtime-actix-native-tls",
#   "sqlx-mysql",
  "sqlx-postgres",
  # "sqlx-sqlite",
]
